Added prompt txt files

--- a/shared/locales/src/consistent-words-en.json
+++ b/shared/locales/src/consistent-words-en.json
@@ -91,5 +91,6 @@
     "sjabloon": "template",
     "niveau": "level",
     "indiener": "petitioner",
-    "bundelkorting": "bundle discount"
+    "bundelkorting": "bundle discount",
+    "vragenlijst": "form"
   }
