--- a/shared/locales/src/consistent-words-fr.json
+++ b/shared/locales/src/consistent-words-fr.json
@@ -23,5 +23,6 @@
     "rechten": "droits",
     "sjabloon": "modèle",
     "fiscale attesten": "attestations fiscales",
-    "bundelkorting": "réduction pour plusieurs inscriptions"
+    "bundelkorting": "réduction pour plusieurs inscriptions",
+    "vragenlijst": "formulaire personnalisé"
   }
