--- a/shared/locales/src/digit/machine-GoogleGemini-en.json
+++ b/shared/locales/src/digit/machine-GoogleGemini-en.json
@@ -85,7 +85,7 @@
   },
   "1dfaeb07-5f01-42c7-a9a4-0096047da86e": {
     "original": "Vragenlijst van KSA Nationaal",
-    "translation": "KSA National questionnaire"
+    "translation": "KSA National form"
   },
   "209f9f13-4897-4310-95eb-f436987b8ba7": {
     "original": "Kijk hieronder na of alle functies toegekend zijn. Om een functie toe te kennen zorg je er eerst voor dat de persoon is ingeschreven in Ravot, daarna kan je functies toekennen door het lid open te klikken in het tabblad ‘Leden’. Daar kan je met de rechtermuisknop op een lid klikken en \"Functies bewerken\" kiezen.",
@@ -841,7 +841,7 @@
   },
   "dfd3083c-6483-46de-9cc8-0afeb7f021f3": {
     "original": "Open Ravot",
-    "translation": "Open Play"
+    "translation": "Open Ravot"
   },
   "e07bc7a1-92c0-48fc-91f3-46e12573ee03": {
     "original": "Naam groep",
