--- a/shared/locales/src/digit/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/digit/machine-GoogleGemini-fr.json
@@ -113,7 +113,7 @@
   },
   "1dfaeb07-5f01-42c7-a9a4-0096047da86e": {
     "original": "Vragenlijst van KSA Nationaal",
-    "translation": "Questionnaire de KSA National"
+    "translation": "Formulaire personnalisé de KSA Nationaal"
   },
   "209f9f13-4897-4310-95eb-f436987b8ba7": {
     "original": "Kijk hieronder na of alle functies toegekend zijn. Om een functie toe te kennen zorg je er eerst voor dat de persoon is ingeschreven in Ravot, daarna kan je functies toekennen door het lid open te klikken in het tabblad ‘Leden’. Daar kan je met de rechtermuisknop op een lid klikken en \"Functies bewerken\" kiezen.",
