--- a/shared/locales/src/keeo/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/keeo/machine-GoogleGemini-fr.json
@@ -125,7 +125,7 @@
   },
   "1dfaeb07-5f01-42c7-a9a4-0096047da86e": {
     "original": "Vragenlijst van FOS Open Scouting",
-    "translation": "Questionnaire de FOS Open Scouting"
+    "translation": "Formulaire personnalisé de FOS Open Scouting"
   },
   "1f1d657d-bc73-4cae-9025-b3ec67a705e7": {
     "original": "Je kan geen aansluitingen meer verwijderen in dit scoutsjaar",
