--- a/shared/locales/src/jamboree/machine-GoogleGemini-en.json
+++ b/shared/locales/src/jamboree/machine-GoogleGemini-en.json
@@ -121,7 +121,7 @@
   },
   "1dfaeb07-5f01-42c7-a9a4-0096047da86e": {
     "original": "Vragenlijst van GSB",
-    "translation": "GSB questionnaire"
+    "translation": "GSB form"
   },
   "1f1d657d-bc73-4cae-9025-b3ec67a705e7": {
     "original": "Je kan geen aansluitingen meer verwijderen in dit scoutsjaar",
