Improved switching to new period flow

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2280,7 +2280,7 @@
   "62536e62-9d62-429f-97d4-2605e738fc92": "Alle leiding en leden verliezen hun functies en moet je opnieuw instellen",
   "b66376fb-238e-42dd-aec6-f48b9ee2e215": "Nieuw werkjaar",
   "9128d20d-f23a-4d1e-a631-c61a25ade53c": "Niet beschikbaar",
-  "b34e7f10-2e03-42f5-b865-2d88571d2a6e": "Deze periode is niet beschikbaar voor jouw organisatie.",
+  "b34e7f10-2e03-42f5-b865-2d88571d2a6e": "Deze periode is niet beschikbaar voor jouw vereniging.",
   "253b64ce-1507-4655-a75d-ae046e983329": "Je bekijkt nu",
   "8b1933de-fb99-4a61-91c0-a80e5d09cef5": "Maak jouw account",
   "0b78041e-b438-46c5-a7f3-62915022c294": "Je kan later nog andere beheerders toevoegen, dus kies een persoonlijk e-mailadres en wachtwoord dat niet gedeeld wordt.",
@@ -4986,7 +4986,7 @@
   "94e2d4ff-9b4b-4861-ba42-341ed67b32d8": "Je hebt geen toegangsrechten om deze inschrijvingen te bekijken",
   "a3795bf6-ed50-4aa6-9caf-33820292c159": "De periode die je wilt instellen bestaat niet (meer)",
   "b6bc2fef-71ac-43a1-b430-50945427a9e3": "De periode die je wilt instellen is reeds afgesloten",
-  "e0fff936-3f3c-46b8-adcf-c723c33907a2": "Het werkjaar die je wilt instellen is nog niet gestart",
+  "e0fff936-3f3c-46b8-adcf-c723c33907a2": "Het werkjaar dat je wilt instellen is nog niet gestart",
   "347463a0-1e9a-40fe-996c-d77ba13bc05b": "Dit werkjaar bestaat niet of is niet gekoppeld aan jouw organisatie.",
   "2655c006-55af-47e6-959c-16acdb1917dc": "Het werkjaar dat je wilt instellen is nog niet gestart",
   "44ff6618-ecbf-408b-9cc1-b1479e8ba8a2": "Het werkjaar dat je wilt instellen is al afgelopen",
