--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5136,5 +5136,26 @@
   "270c18bf-7852-4d33-809d-6567c4bd56a9": "Vragenlijst bewerken",
   "770518af-b094-4fca-bc0a-641f508895ef": "Categorie bewerken",
   "f443476a-44f5-4dda-8c39-50332319d9ec": "Vul een naam in",
-  "b5822ffa-2c8b-4c88-bf4d-eb5566da56e7": "Nieuwe categorie"
+  "b5822ffa-2c8b-4c88-bf4d-eb5566da56e7": "Nieuwe categorie",
+  "e942f245-9e13-427b-960e-5500a2711a05": "Standaardtarief",
+  "b17b2abe-34a5-4231-a170-5a9b849ecd3c": "Er ging iets mis bij het ophalen van de bestellingen. Mogelijks wordt een bepaalde filter of ordening niet ondersteund, pas die aan indien mogelijk.",
+  "f9b0679e-029b-4d34-a848-66674f33cdcf": "Webshop nog niet geladen",
+  "33a6805e-a4f3-44ca-bd10-f26bc1664963": "Schakel over naar {werkjaar-2025-2026}",
+  "b2e0df73-bf2c-421c-8feb-7bec5fe7d8c1": "Dit werkjaar is niet actief",
+  "e875d12e-fa1d-43f5-b96a-be4ba8af04eb": "{name} is nu ingesteld als het huidige werkjaar",
+  "480abc28-3803-4d24-b5ad-4f8fb1a44471": "{year-2025-2026} aanmaken",
+  "e0433c50-b6df-4fd9-92ba-e79d3b21aaa0": "Je kan een kopie maken van de instellingen van je huidige werkjaar (bv. de prijzen en onderverdelingen) als voorbereiding op je nieuwe werkjaar. Je kan daarna op een moment naar keuze overschakelen naar het nieuwe werkjaar (bv. als je al in juli begint met inschrijvingen voor het volgende werkjaar). Maar je kan ook wachten tot het einde van het huidige werkjaar, dan zal je automatisch worden overgeschakeld.",
+  "bae1933a-d646-4d5c-983d-8c62319b924c": "De inschrijvingen van elke inschrijvingsgroep wordt gesloten, je kan deze na controle open zetten.",
+  "9063147f-5dee-4da0-8928-69d7dcb352c4": "Na controle van alle instellingen kan je overschakelen op het nieuwe werkjaar. Dit kan ten vroegste vanaf juli.",
+  "5d5224a4-26d6-4a01-ac3d-8ed7728522b2": "Kopie maken",
+  "43f93b0e-debd-4afa-b81a-fac67c7401ea": "{werkjaar-2025-2026} is nu aangemaakt als kopie van je huidige werkjaar. Kijk de prijzen en instellingen goed na van je kopie.",
+  "0ab4ec6b-ae79-4d48-bd45-37da8e712509": "Je kan pas je volgende werkjaar klaarzetten ten vroegste 8 maanden voor de start ervan.",
+  "00650ac3-eb78-4c8b-b7ec-d892772837a1": "Geboortedatum",
+  "8aad46a6-a864-4e60-a3f0-dffe2b37033c": "Adres",
+  "a68020d1-1ee8-4b57-a307-840fb5deaa02": "Telefoonnummer",
+  "effd2b1f-01f6-46e0-a5af-488bcbd93f1d": "E-mailadres",
+  "3f196c5f-1b59-4d18-8fca-feaef78e7f09": "Ouders",
+  "a148463b-5ae7-44d8-9cac-20538fc95431": "Tweede ouder",
+  "23911c89-12b5-403a-a355-20f3c986c76f": "Noodcontact",
+  "8e92e034-b745-4d0f-8ac1-4363101f9603": "Ontbrekende gegevens"
 }
