Changed translation of "group" to correctly take the platform-dependent naming

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2868,7 +2868,7 @@
   "aa45000f-8cff-4cb6-99b2-3202eb64c4a8": "Code om een onbekende gebruiker toegang te geven tot een lid.",
   "d70f2a7f-d8b4-4846-8dc0-a8e978765b9d": "UiTPAS-nummer",
   "439176a5-dd35-476b-8c65-3216560cac2f": "Rijksregisternummer",
-  "a0b1e726-345d-4288-a1db-7437d1b47482": "Groep",
+  "a0b1e726-345d-4288-a1db-7437d1b47482": "#Groep",
   "fb629dba-088e-4c97-b201-49787bcda0ac": "Leeftijdsgroep",
   "62ce5fa4-3ea4-4fa8-a495-ff5eef1ec5d4": "Telefoonnummers",
   "94823cfc-f583-4288-bf44-0a7cfec9e61f": "Niet-geverifieerde gegevens",
